Going through previous class website

--- a/HW-1/index.html
+++ b/HW-1/index.html
@@ -10,7 +10,9 @@
         <meta name="viewport" content="device-width, initial-scale=1.0">
         <meta name="author" content="Mike Kennedy">
 
-        <link rel="stylesheet" href="./css/style.css">
+        <style>
+            body {background-color: snow}
+        </style>
         
     </head>
     <body>
