--- a/HW-1/index.html
+++ b/HW-1/index.html
@@ -11,17 +11,43 @@
         <meta name="author" content="Mike Kennedy">
 
         <style>
-            body {background-color: snow}
+            div {
+                text-align: center;
+                background: goldenrod;
+                width: 50%;
+                margin: auto;
+                
+            }
+            body {
+                background-image: url(./b-fast.jpg);
+                background-color: snow
+            }
         </style>
         
     </head>
     <body>
-        <div class="Me">
+
+        <div id="1st section" class="page-block">
+            <p>
+                <h2>Yes</h2>
+                Yes
+            </p>
+        </div>
+
+        <div id="2nd section" class="page-block">
             <h2>Information about me</h2>
 
-            Hi, I’m Mike Kennedy. I like to draw comics and animate. I am from Great Falls, MT and am a non-traditional student. I am currently a senior at UM. I like to play games online to keep in touch with friends and family, usually this is Overwatch. Looney Tunes is a huge inspiration for my desire to draw cartoons.
-            </br></br>
-            Apparently, I took my last web design class over 5 years ago and I’m currently feeling pretty lost. I look forward to getting caught back up and hope to learn skills that keep me coding.
+            <p> Hi, I’m Mike Kennedy. I like to draw comics and animate. I am from Great Falls, MT and am a non-traditional student. I am currently a senior at UM. I like to play games online to keep in touch with friends and family, usually this is Overwatch. Looney Tunes is a huge inspiration for my desire to draw cartoons.
+                </br></br>
+                Apparently, I took my last web design class over 5 years ago and I’m currently feeling pretty lost. I look forward to getting caught back up and hope to learn skills that keep me coding.
+            </p>
+        </div>
+
+        <div id="3rd section" class="page-block">
+            <p>
+                <h2>No</h2>
+                No
+            </p>
         </div>
 
     </body>
