--- a/HW-1/index.html
+++ b/HW-1/index.html
@@ -30,14 +30,14 @@
 
         <div id="1st section" class="page-block">
             <p>
-                <h2>Yes</h2>
-                Yes
+                <h1>What am I?</h1>
+              <h3>A quick guide to that one guy</h3>
             </p>
         </div>
 
         <div id="2nd section" class="page-block">
             
-            <h2>Information about me</h2>
+            <h2>They call me Mikey Boiiii</h2>
 
                 <img src="./profile.PNG" alt="profile" align="left" width="200
                 ">
@@ -50,8 +50,8 @@
 
         <div id="3rd section" class="page-block">
             <p>
-                <h2>No</h2>
-                No
+                <h2>Here is an example of my work</h2>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/2nLsBlOc2yU?si=itKs4LKGHcV44_Il" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </p>
         </div>
 
