trying to follow the rules as best I can

--- a/HW-3/index.html
+++ b/HW-3/index.html
@@ -10,6 +10,7 @@
 
     <body>
         <h1>Choose!</h1>
+        <h3>Which is your prefered animation studio?</h3>
        
         <div id=img1><img src="./img/Disney/disney-logo-castle.jpg" width="200"></div>
             
