settled on a story

--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -3,8 +3,24 @@
     <head>
         <title>Homework 4</title>
     </head>
+    <style>
+            body{
+            background-color: rgb(84, 215, 255);
+            font: arial;
+        }
+    </style>
+    <script>
+
+    </script>
 
     <body>
+        <h1>Nature Calls</h1>
+        <br>
+        <img src="scared.jpg" id="mainImage" width="600">
+    <div id="question">
+    
+  
+    </div>
 
     </body>
 </html>
