--- a/HW-4/index.html
+++ b/HW-4/index.html
@@ -80,9 +80,9 @@
             }
         }
 
-        function restartButton(){
-            location.reload();
-        }
+        // function restartButton(){
+        //     location.reload();
+        // }
 
 
  
