--- a/HW-5/index.html
+++ b/HW-5/index.html
@@ -10,5 +10,21 @@
    
     <body onload="printBlanks();">
         <h1>HELLO</h1>
+
+        <div class="divTable">
+            <div class="divTableBody">
+                <div class="divTableRow">
+                    <div class="divTableCell"><img src="" id="image1" width="250" height="200" onclick="flipImage(0);"></div>
+                    <div class="divTableCell"><img src="" id="image2" width="250" height="200" onclick="flipImage(1);"></div>
+                    <div class="divTableCell"><img src="" id="image3" width="250" height="200" onclick="flipImage(2);"></div>
+                </div>
+                <div class="divTableRow">
+                    <div class="divTableCell"><img src="" id="image4" width="250" height="200" onclick="flipImage(3);"></div>
+                    <div class="divTableCell"><img src="" id="image5" width="250" height="200" onclick="flipImage(4);"></div>
+                    <div class="divTableCell"><img src="" id="image6" width="250" height="200" onclick="flipImage(5);"></div>
+                    <div class="divTableCell"><img src="" id="image7" width="250" height="200" onclick="flipImage(6);"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
