--- a/HW-5/index.html
+++ b/HW-5/index.html
@@ -5,7 +5,7 @@
     
         <script src="main.js"></script>
         
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css"></link>
     </head>
    
     <body onload="printBlanks();">
@@ -22,7 +22,18 @@
                     <div class="divTableCell"><img src="" id="image4" width="250" height="200" onclick="flipImage(3);"></div>
                     <div class="divTableCell"><img src="" id="image5" width="250" height="200" onclick="flipImage(4);"></div>
                     <div class="divTableCell"><img src="" id="image6" width="250" height="200" onclick="flipImage(5);"></div>
+                </div>
+
+                <div class="divTableRow">
                     <div class="divTableCell"><img src="" id="image7" width="250" height="200" onclick="flipImage(6);"></div>
+                    <div class="divTableCell"><img src="" id="image8" width="250" height="200" onclick="flipImage(7);"></div>
+                    <div class="divTableCell"><img src="" id="image9" width="250" height="200" onclick="flipImage(8);"></div>
+                </div>
+
+                <div class="divTableRow">
+                    <div class="divTableCell"><img src="" id="image10" width="250" height="200" onclick="flipImage(9);"></div>
+                    <div class="divTableCell"><img src="" id="image11" width="250" height="200" onclick="flipImage(10);"></div>
+                    <div class="divTableCell"><img src="" id="image12" width="250" height="200" onclick="flipImage(11);"></div>
                 </div>
             </div>
         </div>
