--- a/HW-5/index.html
+++ b/HW-5/index.html
@@ -9,7 +9,7 @@
     </head>
    
     <body onload="printBlanks();">
-        <h1>HELLO</h1>
+        <h1>This is how my actual memory works</h1>
 
         <div class="divTable">
             <div class="divTableBody">
@@ -17,24 +17,22 @@
                     <div class="divTableCell"><img src="" id="image1" width="250" height="200" onclick="flipImage(0);"></div>
                     <div class="divTableCell"><img src="" id="image2" width="250" height="200" onclick="flipImage(1);"></div>
                     <div class="divTableCell"><img src="" id="image3" width="250" height="200" onclick="flipImage(2);"></div>
+                    <div class="divTableCell"><img src="" id="image10" width="250" height="200" onclick="flipImage(9);"></div>
                 </div>
                 <div class="divTableRow">
                     <div class="divTableCell"><img src="" id="image4" width="250" height="200" onclick="flipImage(3);"></div>
                     <div class="divTableCell"><img src="" id="image5" width="250" height="200" onclick="flipImage(4);"></div>
                     <div class="divTableCell"><img src="" id="image6" width="250" height="200" onclick="flipImage(5);"></div>
+                    <div class="divTableCell"><img src="" id="image11" width="250" height="200" onclick="flipImage(10);"></div>
                 </div>
 
                 <div class="divTableRow">
                     <div class="divTableCell"><img src="" id="image7" width="250" height="200" onclick="flipImage(6);"></div>
                     <div class="divTableCell"><img src="" id="image8" width="250" height="200" onclick="flipImage(7);"></div>
                     <div class="divTableCell"><img src="" id="image9" width="250" height="200" onclick="flipImage(8);"></div>
-                </div>
-
-                <div class="divTableRow">
-                    <div class="divTableCell"><img src="" id="image10" width="250" height="200" onclick="flipImage(9);"></div>
-                    <div class="divTableCell"><img src="" id="image11" width="250" height="200" onclick="flipImage(10);"></div>
                     <div class="divTableCell"><img src="" id="image12" width="250" height="200" onclick="flipImage(11);"></div>
                 </div>
+
             </div>
         </div>
     </body>
