--- a/HW-6/index.html
+++ b/HW-6/index.html
@@ -9,7 +9,7 @@
     </head>
    
     <body onload="printBlanks();playerInfo();">
-        <h1>This is how my actual memory works</h1>
+        <h1>This is my MEMORY GAME!!!</h1>
 
         <div class="divTable">
             <div class="divTableBody">
