--- a/HW-7/index.html
+++ b/HW-7/index.html
@@ -4,9 +4,12 @@
         <script src="scripts/main.js"></script>
         <link rel="stylesheet" href="styles/main.css" text="text/css">
     </head>
-    <body onload="">
-        <div id=""></div>
-        <button id="btnSubmit" onClick="">yes</button>
-
+    <body onload="initializeArray();">
+        <h3 id="title"></h3>
+        <div id="image"></div>
+        <!-- <div id="description"></div>
+        <div id="author"></div>
+        <div id="year"></div> -->
+        <button id="btnSubmit" onClick="accessInformation();">Random Art</button>
     </body>
 </html>
