--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -4,10 +4,12 @@
     <link href="style/style.css" type="text/css" rel="stylesheet">
     <body>
         <div id="square"></div>
+        <div id="triangle"></div>
+       
+        <img src="" id="pic" width = 400>
         <br>
         <button id="move">Random Pic</button>
         <br>
-        <img src="" id="pic" width = 400>
         <p class="stuff">First Paragraph</p>
         <p class="stuff">Second Paragraph</p>
         <p id="third">Third Paragraph</p>
