breaking lots of code

--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -3,7 +3,7 @@
     <script src="./main.js"></script>
     <link href="style/style.css" type="text/css" rel="stylesheet">
     <body>
-        <div id="square"></div>
+        <div id="square" class="square"></div>
         <div id="triangle"></div>
        
         <img src="" id="pic" width = 400>
