--- a/HW-8/index.html
+++ b/HW-8/index.html
@@ -1,6 +1,7 @@
 <html>
     <script src="./libs/jquery.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./scripts/main.js"></script>
+    <!-- <script src="./scripts/ViewFinder.js"></script> -->
     <link href="style/style.css" type="text/css" rel="stylesheet">
     <body>
         <div id="square" class="square"></div>
@@ -8,12 +9,12 @@
        
         <img src="" id="pic" width = 400>
         <br>
-        <button id="move">Random Pic</button>
+        <button id="move">New Pic</button>
         <br>
-        <p class="stuff">First Paragraph</p>
-        <p class="stuff">Second Paragraph</p>
-        <p id="third">Third Paragraph</p>
+        <p class="rotate"></p>
+        <p class="stuff">byebye</p>
+        <p id="third">Hello</p>
 
-        <div class="stuff">This is a whole bunch of stuff in the div</div>
+        <div class="stuff">I'm outta here</div>
     </body>
 </html>
