still poking around in the code

--- a/HW-9/index.html
+++ b/HW-9/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <script src="libs/jquery-3.3.1.min.js"></script>
-    <script src="scripts/jsonajax.js"></script>
+    <script src="scripts/main.js"></script>
     </head>
 
     <body>
-        <div id="bikeInformation"></div>
+        <div id="rickAndMortyInfo"></div>
         <button id="btnSubmit">Show Information</button>
     </body>
 </html>
