--- a/HW-9/index2.html
+++ b/HW-9/index2.html
@@ -3,7 +3,7 @@
 
 <head>
     <script src="libs/jquery-3.3.1.min.js"></script>
-    <script src="scripts/main2.js"></script>
+    <script src="scripts/jsonajax.js"></script>
     </head>
 
     <body>
