--- a/HW-9/index.html
+++ b/HW-9/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <script src="libs/jquery-3.3.1.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/jsonajax.js"></script>
     </head>
+    <link rel="stylesheet" href="styles/styles.css" text="text/css">
 
     <body>
         <div id="rickAndMortyInfo"></div>
