--- a/HW-11/index.html
+++ b/HW-11/index.html
@@ -10,9 +10,14 @@
 </head>
 
 <body>
+
+
     <canvas id="myCanvas" height="600" width="800"></canvas>
 
     <script src="js/main.js"></script>
+    <br>
+    <audio id="song" src="https://montana-media-arts.github.io/MART441-Examples/Brahms.mp3" controls="controls">
+    </audio>
 </body>
 
 </html>
