--- a/HW-11/index.html
+++ b/HW-11/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Canvas</title>
+    <title>Mike Kennedy's Homework 11</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="js/squareclass.js"></script>
