added json and library

--- a/HW-12/index.html
+++ b/HW-12/index.html
@@ -5,11 +5,12 @@
     <script src="libs/jquery.min.js"></script>
     <script src="scripts/square.js"></script>
     <script src="scripts/canvas.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
 
      <link rel="stylesheet" type="text/css" href="css/style.css">
     <body>
-        <p>yes</p>
+        <!-- testing to make sure css is linked -->
+        <!-- <p>yes</p> -->
         <canvas id="myCanvas" height="600" width="800"></canvas>
 
       
