--- a/HW-12/index.html
+++ b/HW-12/index.html
@@ -5,6 +5,7 @@
     <script src="libs/jquery.min.js"></script>
     <script src="scripts/square.js"></script>
     <script src="scripts/canvas.js"></script>
+    <script scr="scripts/goodSquares.js"></script>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
 
      <link rel="stylesheet" type="text/css" href="css/style.css">
