--- a/HW-13/index.html
+++ b/HW-13/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- <script src="libs/phaser.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 </head>
 <body>
@@ -29,7 +30,7 @@
         this.load.setBaseURL('http://labs.phaser.io');
 
         this.load.image('sky', 'assets/waves.png');
-        this.load.image('logo', 'assets/hyo.png');
+        this.load.image('logo', 'assets/watermelon.png');
         this.load.image('red', 'assets/fuse.png');
     }
 
