--- a/HW-13/index.html
+++ b/HW-13/index.html
@@ -35,6 +35,8 @@ var config = {
     var stars;
     var platforms;
     var cursors;
+    var score = 0;
+    var scoreText;
 
     var game = new Phaser.Game(config);
 
@@ -97,6 +99,8 @@ var config = {
 
         });
 
+        scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+
         this.physics.add.collider(player, platforms);
         this.physics.add.collider(stars, platforms);
 
@@ -133,6 +137,8 @@ var config = {
     function collectStar (player, star)
     {
         star.disableBody(true, true);
+        score += 10;
+        scoreText.setText('Score: ' + score);
     }
 </script>
 
