took away trackball controls

--- a/HW-14/index.html
+++ b/HW-14/index.html
@@ -12,7 +12,7 @@
   </script>
   <script src="libs/OBJLoader.js">
   </script>
-  <script src="libs/TrackballControls.js"></script>
+  <!-- <script src="libs/TrackballControls.js"></script> -->
   <script src="js/main.js"></script>
 
 </body>
