added jeep, changed colors

--- a/HW-14/index.html
+++ b/HW-14/index.html
@@ -8,11 +8,9 @@
 </head>
 
 <body>
-  <script src="libs/three.min.js">
-  </script>
-  <script src="libs/OBJLoader.js">
-  </script>
-  <!-- <script src="libs/TrackballControls.js"></script> -->
+  <script src="libs/three.min.js"></script>
+  <script src="libs/OBJLoader.js"></script>
+  <script src="libs/TrackballControls.js"></script>
   <script src="js/main.js"></script>
 
 </body>
