--- a/HW-14_Example/index.html
+++ b/HW-14_Example/index.html
@@ -8,10 +8,8 @@
 </head>
 
 <body>
-  <script src="libs/three.min.js">
-  </script>
-  <script src="libs/OBJLoader.js">
-  </script>
+  <script src="libs/three.min.js"></script>
+  <script src="libs/OBJLoader.js"></script>
   <script src="libs/TrackballControls.js"></script>
   <script src="js/main.js"></script>
 
