--- a/HW-15/index 2.html
+++ b/HW-15/index 2.html
@@ -35,15 +35,38 @@
       const engine = new BABYLON.Engine(canvas, true); // Generate the BABYLON 3D engine
 
       // Add your code here matching the playground format
-      const createScene = function () {
-        const scene = new BABYLON.Scene(engine);
+      var createScene = function () {
+        // This creates a basic Babylon Scene object (non-mesh)
+        var scene = new BABYLON.Scene(engine);
 
-        BABYLON.MeshBuilder.CreateBox("box", {});
+        // This creates and positions a free camera (non-mesh)
+        const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 3, new BABYLON.Vector3(0, 0, 0), scene);
+camera.attachControl(canvas, true);
 
-        const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, new BABYLON.Vector3(0, 0, 0));
-        camera.attachControl(canvas, true);
-        const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
+        // This targets the camera to scene origin
+    //    camera.setTarget(BABYLON.Vector3.Zero());
+
+        // This attaches the camera to the canvas
+      //  camera.attachControl(canvas, true);
+
+        // This creates a light, aiming 0,1,0 - to the sky (non-mesh)
+        var light = new BABYLON.HemisphericLight(
+          "light",
+          new BABYLON.Vector3(0, 1, 0),
+          scene
+        );
+
+        // Default intensity is 1. Let's dim the light a small amount
+        light.intensity = 0.7;
+        BABYLON.SceneLoader.ImportMeshAsync("chicken", "model/chicken/source/", "CHICKEN.glb");
+
+        var ground = BABYLON.MeshBuilder.CreateGround(
+          "ground",
+          { width: 6, height: 6 },
+          scene
+        );
+        
         return scene;
       };
 
