added a few models

--- a/HW-15/index 2.html
+++ b/HW-15/index 2.html
@@ -39,27 +39,16 @@
         // This creates a basic Babylon Scene object (non-mesh)
         var scene = new BABYLON.Scene(engine);
 
-        // This creates and positions a free camera (non-mesh)
         const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 3, new BABYLON.Vector3(0, 0, 0), scene);
-camera.attachControl(canvas, true);
+          camera.attachControl(canvas, true);
 
-
-        // This targets the camera to scene origin
-    //    camera.setTarget(BABYLON.Vector3.Zero());
-
-        // This attaches the camera to the canvas
-      //  camera.attachControl(canvas, true);
-
-        // This creates a light, aiming 0,1,0 - to the sky (non-mesh)
         var light = new BABYLON.HemisphericLight(
           "light",
           new BABYLON.Vector3(0, 1, 0),
           scene
         );
-
-        // Default intensity is 1. Let's dim the light a small amount
-        light.intensity = 0.7;
-        BABYLON.SceneLoader.ImportMeshAsync("chicken", "model/chicken/source/", "CHICKEN.glb");
+       light.intensity = 0.7;
+       BABYLON.SceneLoader.ImportMeshAsync("", "/models/", "burger.glb");
 
         var ground = BABYLON.MeshBuilder.CreateGround(
           "ground",
