--- a/HW-15/index2.html
+++ b/HW-15/index2.html
@@ -48,7 +48,7 @@
           scene
         );
        light.intensity = 0.7;
-       BABYLON.SceneLoader.ImportMeshAsync("", "/models/", "burger.glb")
+       BABYLON.SceneLoader.ImportMeshAsync("", "models/", "burger.glb")
 //        .then((result) => {
 //     result.meshes[1].position.x = 20;
 //     const myMesh1 = scene.getMeshByName("myMesh_1");
